Add keyframe switch and automatically open keyframes
-k and --keyframes will now open keyframe file,
also opening subtitle.srt will open subtitle.kf
like it does for video and waveforms

--- a/docs/subtitleeditor.1
+++ b/docs/subtitleeditor.1
@@ -89,6 +89,11 @@ Open video file.
 Open waveform file.
 .RE
 .PP
+\fB\-k \-\-keyframes\=FILE\fR
+.RS 3n
+Open keyframes file.
+.RE
+.PP
 \fB\-\-display\=DISPLAY\fR
 .RS 3n
 X display to use, if still run under X.
