Join Document Plugin: Add Append action and make offset configurable
This adds new action that adds subtitles from another
file without changing timecodes at all. This is useful if the subtitles
are for the same video, for example if two people were working on the
same video and now need to join their separate parts.

Also, the offset of the original Join subtitle action is not
configurable via a dialog. The dialog is also smart, as it offers
the duration of video as the default offset if a video is open. When no
video is open, the endtime of last subtitle is offered, mimicking
current behaviour. Of course, the user can also choose something else.

In practice, when joining subtitles like this, often they will be timed
to a different video, that is supposedly going to be joined after the
current video.

Also a gramatical fix to translation files is applied.

--- a/po/bg.po
+++ b/po/bg.po
@@ -1293,8 +1293,8 @@ msgstr "Присъединяване на документ"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "1 субтитри бяха добавени към документа."
 msgstr[1] "%d субтитри бяха добавени към документа."
 
