--- a/po/el.po
+++ b/po/el.po
@@ -1303,8 +1303,8 @@ msgstr "Συνένωση εγγράφου"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "1 υπότιτλος έχει προστεθεί σε αυτό το έγγραφο."
 msgstr[1] "%d υπότιτλοι έχουν προστεθεί σε αυτό το έγγραφο."
 
