--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1310,10 +1310,10 @@ msgstr "Join document"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
-msgstr[0] "1 subtitle has been added at this document."
-msgstr[1] "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
+msgstr[0] "One subtitle has been added to this document."
+msgstr[1] "%d subtitles have been added to this document."
 
 #: ../plugins/actions/keyframesmanagement/keyframesgenerator.cc:33
 #: ../plugins/actions/keyframesmanagement/keyframesgeneratorusingframe.cc:34
