--- a/po/es.po
+++ b/po/es.po
@@ -1296,8 +1296,8 @@ msgstr "Unir Documento"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "1 subtítulo ha sido agregado a este documento."
 msgstr[1] "%d subtítulos han sido agregados a este documento."
 
