--- a/po/eu.po
+++ b/po/eu.po
@@ -1255,8 +1255,8 @@ msgstr "Sartu dokumentuan"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "azpititulu 1 gehitu da dokumentuan."
 msgstr[1] "%d azpititulu gehitu dira dokumentuan."
 
