--- a/po/fr.po
+++ b/po/fr.po
@@ -1324,8 +1324,8 @@ msgstr "Fusionner un document"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "1 sous-titre à été ajouté à ce document."
 msgstr[1] "%d sous-titres ont été ajoutés à ce document."
 
