--- a/po/lt.po
+++ b/po/lt.po
@@ -1275,8 +1275,8 @@ msgstr "Sujungti dokumentą"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "Šiame dokumente buvo pridėtas %d subtitras."
 msgstr[1] "Šiame dokumente buvo pridėti %d subtitrai."
 msgstr[2] "Šiame dokumente buvo pridėta %d subtitrų."
