--- a/po/pl.po
+++ b/po/pl.po
@@ -1300,8 +1300,8 @@ msgstr "Złącz dokument"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "1 napis został dodany do tego dokumentu"
 msgstr[1] "%d napisy zostały dodane do tego dokumentu"
 msgstr[2] "%d napisów zostało dodanych do tego dokumentu"
