--- a/po/ru.po
+++ b/po/ru.po
@@ -1303,8 +1303,8 @@ msgstr "Объединить документ"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "1 субтитр был добавлен в документ."
 msgstr[1] "%d субтитров были добавлены в документ."
 msgstr[2] "%d субтитров было добавлено в документ."
