--- a/po/de.po
+++ b/po/de.po
@@ -1321,8 +1321,8 @@ msgstr "Dokument verbinden"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "1 Untertitel wurde diesem Dokument hinzugefügt."
 msgstr[1] "%d Untertitel wurde diesem Dokument hinzugefügt."
 
