--- a/po/eo.po
+++ b/po/eo.po
@@ -1290,8 +1290,8 @@ msgstr "Kunligi dokumenton"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "1 subteksto aldoniĝis al ĉi tiu dokumento."
 msgstr[1] "%d subtekstoj aldoniĝis al ĉi tiu dokumento."
 
