--- a/po/gl.po
+++ b/po/gl.po
@@ -1309,8 +1309,8 @@ msgstr "Unir un documento"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "Engadiuse un subtítulo a este documento."
 msgstr[1] "Engadíronse %d subtítulos a este documento."
 
