--- a/po/hu.po
+++ b/po/hu.po
@@ -1258,8 +1258,8 @@ msgstr ""
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] ""
 msgstr[1] ""
 
