--- a/po/nl.po
+++ b/po/nl.po
@@ -1327,8 +1327,8 @@ msgstr "Nieuw document"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] ""
 msgstr[1] ""
 
