--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -1273,8 +1273,8 @@ msgstr "Une documento"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "Foi adicionada 1 legenda a este documento."
 msgstr[1] "Foram adicionadas %d legendas a este documento."
 
