--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1252,8 +1252,8 @@ msgstr "加入檔案"
 
 #: ../plugins/actions/joindocument/joindocument.cc:142
 #, c-format
-msgid "1 subtitle has been added at this document."
-msgid_plural "%d subtitles have been added at this document."
+msgid "One subtitle has been added to this document."
+msgid_plural "%d subtitles have been added to this document."
 msgstr[0] "%d 條字幕被加入該檔案。"
 
 #: ../plugins/actions/keyframesmanagement/keyframesgenerator.cc:33
